--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css
-">
+  <title> A life</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"/>
   <style>
     * {box-sizing: border-box;}
     body {font-family: Verdana, sans-serif; margin: 0; padding: 0;background-color: #fff; }
@@ -145,7 +144,25 @@ margin: auto;
 
 
 @media (max-width: 480px){
-  
+  .undbox{
+    width:100%;
+   
+    border:px solid tomato;
+    gap:5px;
+  }
+  .round{
+    border:px solid red; width:40%;
+  }
+  .cardimg{
+    border:px solid red; 
+  }
+  .so{
+    color:green;
+  }
+  .st{
+    color:red;
+  }
+ 
   .header {
       height:60px;
       padding:10px;
@@ -196,9 +213,7 @@ margin: auto;
   }
   
  
-  .cardimg{
-     width:165px; height:70%;
-  }
+  
   }
 @media  (max-width: 991px) {
   
@@ -248,11 +263,11 @@ margin: auto;
   border:px solid tomato;
   border-radius:10%;
 }
-.product{
-  width:97%; display: flex; flex-wrap: wrap; gap:5px;margin: auto; border:px solid red;
+.undbox{
+  width:97%; display: flex; flex-wrap: wrap; gap:5px;margin: auto;padding:10px;
 }
-.card2{
- width:181px;
+.round{
+ width:163px;
  border:1px solid rgb(202, 195, 195); height:250px;
 }
 .cardimg{
@@ -328,7 +343,7 @@ margin: auto;
 
     <div class="mySlides fade">
       <div class="numbertext"></div>
-      <img src="Bikash.png" class="sliderimg">
+      <img src="5424010.jpg" class="sliderimg">
       <div class="text"></div>
     </div>
 
@@ -356,15 +371,15 @@ margin: auto;
  <div id="productBox" style= "width:97%; border:px solid red; display:flex; flex-wrap:wrap; gap:5px; margin: auto;"></div><br>
 
 
-<div class="product">
-  <a href="Updated product-details.html"><div class="card2"><img src="vivo.png" class="cardimg"><br><br>   <span class="so">Vivo <br><span class="st">price:12,000 Tk</span> </span> </div></a>
-  <a href="profile.html">                <div class="card2"><img src="realme.png" class="cardimg"><br><br> <span class="so"> Readmi <br><span class="st">price:15,000 Tk</span> </span> </div></a>
-  <a href="profileproduct.html">         <div class="card2"><img src="choclet2.png" class="cardimg"><br><br><span class="so">Nike<br></span> <span class="st">price:2,000 Tk</span></div></a>
-  <a href="myproduct4.html">             <div class="card2"><img src="Nike4.png" class="cardimg" ><br><br><span class="so"> Nike 4c<br></span> <span class="st">price:2,000 Tk</span></div></a>
-  <a href="myproduct5.html">             <div class="card2"><img src="Full2.png" class="cardimg" ><br><br><span class="so">Sweatshirts <br></span>  <span class="st">price:700 Tk</span></div></a>
-  <a href="myproduct6.html">             <div class="card2"><img src="baby shoes2.jpg" class="cardimg" ><br><br><span class="so">Baby Shoes <br></span>  <span class="st">price:1000 Tk</span></div></a>
-  <a href="myproduct7.html">             <div class="card2"><img src="Hop3.png" class="cardimg" ><br><br><span class="so">ti Shart <br></span>  <span class="st">price:700 Tk</span></div></a>
-  <a href="myproduct8.html">             <div class="card2"><img src="ofwhate.png" class="cardimg" ><br><br><span class="so">Shart <br></span>  <span class="st">price:500 Tk</span></div></a>
+<div class="undbox">
+  <a href="Updated product-details.html"><div class="round"><img src="vivo.png" class="cardimg"><br><br>   <span class="so">     Vivo <br></span>         <span class="st">     price:12,000 Tk</span> </span> </div></a>
+  <a href="profile.html">                <div class="round"><img src="realme.png" class="cardimg"><br><br> <span class="so">     Readmi <br></span>       <span class="st">     price:15,000 Tk</span> </span> </div></a>
+  <a href="profileproduct.html">         <div class="round"><img src="choclet2.png" class="cardimg"><br><br><span class="so">    Nike<br></span>          <span class="st">     price:2,000 Tk</span></div></a>
+  <a href="myproduct4.html">             <div class="round"><img src="Nike4.png" class="cardimg" ><br><br><span class="so">      Nike 4c<br></span>       <span class="st">     price:2,000 Tk</span></div></a>
+  <a href="myproduct5.html">             <div class="round"><img src="Full2.png" class="cardimg" ><br><br><span class="so">      Sweatshirts <br></span>  <span class="st">     price:700 Tk</span></div></a>
+  <a href="myproduct6.html">             <div class="round"><img src="baby shoes2.jpg" class="cardimg" ><br><br><span class="so">Baby Shoes <br></span>   <span class="st">     price:1000 Tk</span></div></a>
+  <a href="myproduct7.html">             <div class="round"><img src="Hop3.png" class="cardimg" ><br><br><span class="so">       ti Shart <br></span>     <span class="st">     price:700 Tk</span></div></a>
+  <a href="myproduct8.html">             <div class="round"><img src="ofwhate.png" class="cardimg" ><br><br><span class="so">    Shart <br></span>        <span class="st">     price:500 Tk</span></div></a>
 </div>
 <div class="nav">
  <a href="https://wa.me/8801319992654" target="_blank"> <div class="navone">Chat</div></a>
@@ -451,47 +466,54 @@ window.addEventListener("DOMContentLoaded", function() {
 function searchProduct() {
     let input = document.getElementById('searchBox').value.toLowerCase();
 
-    // 1) productBox এর প্রোডাক্ট
-    const cards1 = productBox.getElementsByClassName('card');
+    // productBox এর কার্ড
+    const cards = document.querySelectorAll('#productBox .card');
 
-    // 2) নিচের .product div এর inside প্রোডাক্ট
-    const cards2 = document.querySelectorAll('.product .card2');
+    // নিচের undbox এর প্রোডাক্ট
+    const rounds = document.querySelectorAll('.undbox .round');
 
-    // Slide hide/show
+    // slider
     const slider = document.querySelector('.slideshow-container');
 
     let hasMatch = false;
 
-    // 1) Loop cards in productBox
-    for (let card of cards1) {
-        let name = card.innerText.toLowerCase();
-        if (name.includes(input)) {
-            card.style.display = "block";
+    // productBox search
+    cards.forEach(c => {
+        let text = c.innerText.toLowerCase();
+
+        if (text.includes(input)) {
+            c.parentElement.style.display = "block";  // <a>
             hasMatch = true;
         } else {
-            card.style.display = "none";
+            c.parentElement.style.display = "none";
         }
-    }
+    });
 
-    // 2) Loop cards in .product
-    for (let card of cards2) {
-        let name = card.innerText.toLowerCase();
-        if (name.includes(input)) {
-            card.style.display = "block";
+    // undbox search
+    rounds.forEach(r => {
+        let text = r.innerText.toLowerCase();
+
+        if (text.includes(input)) {
+            r.style.display = "block";
             hasMatch = true;
         } else {
-            card.style.display = "none";
+            r.style.display = "none";
         }
-    }
+    });
 
-    // Slider logic
+    // Slider show/hide
     if (input === "") {
         slider.style.display = "block";
+
+        cards.forEach(c => c.parentElement.style.display = "block");
+        rounds.forEach(r => r.style.display = "block");
+
     } else {
         slider.style.display = "none";
     }
 }
 </script>
+
 
 </body>
 </html>
