--- a/mtp.html
+++ b/mtp.html
@@ -13,23 +13,109 @@
      }
     
  .header{
-   max-width:800px; border:1px solid green; display: flex; margin: auto; flex-wrap: wrap; 
- }
+   max-width:800px; border:1px solid black; display: flex; margin: auto; padding:5px;
+   gap:10px; min-height:400px;
+  }
+
  .boxone{
-    width:30%;
-    height:500px;
-    border:1px solid red;
+    width:60%; 
+    
+    border:px solid red;
  }
+ .bigimg{
+  width:100%;
+  height:80%; 
+ }
+ #smallimg{
+  
+  width:70px;
+  border:1px solid rgb(159, 154, 154);
+ }
+ button{
+ 
+  width:48%; height:30px; background-color:tomato;color:black; font-size:15px; margin-left:2px;
+ }
+ span{
+  font-size:20px;
+ }
+ @media (max-width: 480px){
+   .header{
+  flex-direction: column; border:px solid rgb(120, 115, 115);
+  
+   }
+   .boxone{
+    width:100%;
+   }
+    #smallimg{
+      width:50px;
+    }
+ }
+ 
+ 
 </style>
 
 <body>
 <a href="index.html"><button class="back">← Back</button></a><br><br>
 <div class="header">
-<div class="boxone"></div>
-<div class="boxone"></div>
-<div class="boxone"></div>
+<div class="boxone">
+  <img src="Nike2.png" class="bigimg">
+  <img src="Nike2.png" alt="" id="smallimg">
+  <img src="Nike2.png" alt="" id="smallimg">
+  <img src="Nike2.png" alt="" id="smallimg">
+  
+
 
 </div>
+<div class="boxone">
+  <span>Best product and best sale  50 % Off  delivery free </span><br><br>
+  <span>Size: 38 | 40 |  42 </span><br><br> <span>Color: Blue | Black | Green </span>
+   <p><b>Offer ends in:</b> <span id="timer"></span></p><br>
+
   
+   <a href="https://wa.me/8801319992654" target="_blank"> <button>Order now</button></a>
+   <a href="https://wa.me/8801319992654" target="_blank"> <button> Chat </button></a>
+  
+</div>
+
+
+</div><br>
+<div class="header">
+<div class="boxone">
+  <img src="Nike2.png" class="bigimg">
+  <img src="Nike2.png" alt="" id="smallimg">
+  <img src="Nike2.png" alt="" id="smallimg">
+  <img src="Nike2.png" alt="" id="smallimg">
+  
+
+
+</div>
+<div class="boxone">
+  <span>Best product and best sale  50 % Off  delivery free </span><br><br>
+  <span>Size: 38 | 40 |  42 </span><br><br> <span>Color: Blue | Black | Green </span>
+   <p><b>Offer ends in:</b> <span id="timer"></span></p><br>
+
+  
+   <a href="https://wa.me/8801319992654" target="_blank"> <button>Order now</button></a>
+   <a href="https://wa.me/8801319992654" target="_blank"> <button> Chat </button></a>
+  
+</div>
+
+
+</div>
+  <script>
+  let time = 24 * 60 * 60; // 24 hours in seconds
+
+  setInterval(function () {
+    let hours = Math.floor(time / 3600);
+    let minutes = Math.floor((time % 3600) / 60);
+    let seconds = time % 60;
+
+    document.getElementById("timer").innerText =
+      hours + "h " + minutes + "m " + seconds + "s";
+
+    time--;
+  }, 1000);
+</script>
+
 </body>
 </html>
